# veldwatch

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
api/: deps.py  main.py
api/models/: __init__.py
api/routes/: alerts.py  runs.py  traces.py
dashboard/: README.md  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/alerts/: page.tsx
dashboard/src/app/runs/: page.tsx
dashboard/src/app/runs/[runId]/: page.tsx
dashboard/src/app/trend/: page.tsx
dashboard/src/components/: AlertsTable.tsx  EventsTable.tsx  RunsTable.tsx  Sidebar.tsx  StatCard.tsx  TrendView.tsx
dashboard/src/lib/: api.ts  types.ts
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
docs/: architecture.md  concepts.md  quickstart.md
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_alert.py  test_decorators.py  test_logger.py  test_store.py  test_tracer.py  test_trend.py  test_version.py  test_watcher.py
veldwatch/: __init__.py  alert.py  logger.py  store.py  tracer.py  trend.py  watcher.py
veldwatch/integrations/: __init__.py  autogen.py  langchain.py  openai.py
veldwatch/sdk/: __init__.py  decorators.py
