[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veldwatch"
version = "0.1.0"
description = "Open-source AI agent observability and oversight platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Joel-eth" },
]
keywords = ["ai", "agents", "observability", "tracing", "monitoring", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
]
langchain = ["langchain>=0.1.0"]
openai = ["openai>=1.0.0"]
autogen = ["pyautogen>=0.2.0"]

[project.urls]
Homepage = "https://github.com/Joel-eth/veldwatch"
Repository = "https://github.com/Joel-eth/veldwatch"
Issues = "https://github.com/Joel-eth/veldwatch/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
